test-suite/invalid/structure/inconsistent-indentation.jyml
# Invalid: inconsistent indentation levels
"object":
  "level1": "value"
    "level2": "wrong indent"
  "back": "correct"